2008-02-25 Douglas S. Blank <dblank@cs.brynmawr.edu>
	* src/gen/lib/test/date_test.py: new slash date tests
	* src/gen/lib/date.py: new get_slash(), fix slash conversions
	* src/DateHandler/_DateParser.py: parser sets slash date to Julian

2008-02-24 Brian Matherly <brian@gramps-project.org>
	* src/GrampsDbUtils/_ReadXML.py:
	* src/GrampsDbUtils/_GrmapsDbWriteXML.py:
	Partial fix for 0001722: add dialog that on import gives a warning if the 
	xml is made with an older version

2008-02-24 Brian Matherly <brian@gramps-project.org>
	* src/docgen/AsciiDoc.py:
	Fix page_break()

2008-02-24 Brian Matherly <brian@gramps-project.org>
	* src/ReportBase/_CommandLineReport.py:
	0001587: Command line reports do not work

2008-02-24 Brian Matherly <brian@gramps-project.org>
	* src/plugins/CmdRef.py:
	0001808: Bug when I click on a Generate Commandline Plugin Reference

2008-02-24 Gary Burton <gary.burton@zen.co.uk>
	* src/Selectors/_SelectPerson.py: Let return key close search field.
	Bug #1728

2008-02-24  Raphael Ackermann <raphael.ackermann@gmail.com>
	* Editors/_EditRepository.py
	* Editors/_EditFamily.py
	* DisplayTabs/_SourceEmbedList.py
	* DisplayTabs/_PersonRefEmbedList.py
	* DisplayTabs/_RepoEmbedList.py
	* DisplayTabs/_AddrEmbedList.py
	* DisplayTabs/_WebEmbedList.py
	* DisplayTabs/_NameEmbedList.py
	* DisplayTabs/_EventEmbedList.py
	* DisplayTabs/_EmbeddedList.py
	* DisplayTabs/_NoteTab.py
	* DisplayTabs/_LocationEmbedList.py
	* DisplayTabs/_ButtonTab.py
	* DisplayTabs/_DataEmbedList.py
	* DisplayTabs/_AttrEmbedList.py
	* DisplayTabs/_LdsEmbedList.py
	* DisplayTabs/_GrampsTab.py
	add Up and Down buttons to the tabs. Added individual tooltips for buttons
	0001807: Missing buttons MoveUp, MoveDown on a Events list in a person... 

2008-02-24 Gary Burton <gary.burton@zen.co.uk>
	* src/Editors/_EditPerson.py: Fixed crash on clicking OK to save name
	change. Bug #1783

2008-02-24  Douglas S. Blank <dblank@cs.brynmawr.edu>